Fixed button spacing on cards, fixed card layout when there is only one card in card deck.

--- a/css/styles.css
+++ b/css/styles.css
@@ -552,7 +552,7 @@ a.btn {
   a.btn-link {
     text-decoration: underline; }
 
-.note a.btn {
+.note a.btn, .card a.btn {
   margin-bottom: 0; }
 
 .cursor-pointer {
