--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -52,7 +52,7 @@ a.btn{
   }
 }
 
-.note{
+.note, .card{
   a.btn{
     margin-bottom: 0;
   }
